--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/1.0.0-alpha.1 (dev).loader.js";
       var config = {
-        dataUrl: buildUrl + "/1.0.0-alpha.1 (dev).data.br",
-        frameworkUrl: buildUrl + "/1.0.0-alpha.1 (dev).framework.js.br",
-        codeUrl: buildUrl + "/1.0.0-alpha.1 (dev).wasm.br",
+        dataUrl: buildUrl + "/1.0.0-alpha.1 (dev).data.gz",
+        frameworkUrl: buildUrl + "/1.0.0-alpha.1 (dev).framework.js.gz",
+        codeUrl: buildUrl + "/1.0.0-alpha.1 (dev).wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "ThoseWhoKnow",
