--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/1.0.0-alpha.1 (dev).loader.js";
+      var loaderUrl = buildUrl + "/thosewhobuild.loader.js";
       var config = {
-        dataUrl: buildUrl + "/1.0.0-alpha.1 (dev).data",
-        frameworkUrl: buildUrl + "/1.0.0-alpha.1 (dev).framework.js",
-        codeUrl: buildUrl + "/1.0.0-alpha.1 (dev).wasm",
+        dataUrl: buildUrl + "/thosewhobuild.data",
+        frameworkUrl: buildUrl + "/thosewhobuild.framework.js",
+        codeUrl: buildUrl + "/thosewhobuild.wasm",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "TeamSillyWillies",
         productName: "ThoseWhoKnow",
-        productVersion: "1.0",
+        productVersion: "1.0.0-alpha.4",
         showBanner: unityShowBanner,
       };
 
