alpha 4 but a bit butter

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/thosewhobuild.loader.js";
+      var loaderUrl = buildUrl + "/alpa fow.loader.js";
       var config = {
-        dataUrl: buildUrl + "/thosewhobuild.data",
-        frameworkUrl: buildUrl + "/thosewhobuild.framework.js",
-        codeUrl: buildUrl + "/thosewhobuild.wasm",
+        dataUrl: buildUrl + "/alpa fow.data",
+        frameworkUrl: buildUrl + "/alpa fow.framework.js",
+        codeUrl: buildUrl + "/alpa fow.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "TeamSillyWillies",
         productName: "ThoseWhoKnow",
